--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Frontend Mentor | Countries API with theme switcher</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
